--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "argon2": "^0.30.3",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0",
